<!-- 
	This file is part of Wicket-Contrib-TinyMce. See
	<http://http://wicketstuff.org/confluence/display/STUFFWIKI/wicket-contrib-tinymce>
	
	Wicket-Contrib-TinyMce is free software: you can redistribute it and/
	or modify it under the terms of the GNU Lesser General Public License
	as published by the Free Software Foundation, either version 3 of the
	License, or (at your option) any later version.
	
	Wicket-Contrib-TinyMce is distributed in the hope that it will be
	useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU Lesser General Public License for more details.
	
	You should have received a copy of the GNU Lesser General Public
	License along with Wicket-Contrib-TinyMce.  If not, see
	<http://www.gnu.org/licenses/>.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.wicketstuff</groupId>
	<artifactId>wicket-contrib-tinymce-examples</artifactId>
	<packaging>war</packaging>
	<version>1.3-SNAPSHOT</version>
	<name>Wicket Contrib TinyMCE Examples</name>
	<description>Examples for Wicket Contrib TinyMCE</description>
	<inceptionYear>2004</inceptionYear>
	<url>
		http://wicketstuff.org/confluence/display/STUFFWIKI/wicket-contrib-tinymce
	</url>

	<licenses>
		<license>
			<name>GNU LESSER GENERAL PUBLIC LICENSE</name>
			<url>http://www.gnu.org/copyleft/lesser.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<url>http://wicketstuff.org/jira/browse/WCTINYMCE</url>
	</issueManagement>

	<scm>
		<connection>
			scm:svn:https://svn.sourceforge.net/svnroot/wicket-stuff/trunk/wicket-contrib-tinymce-examples
		</connection>
		<developerConnection>
			scm:svn:https://svn.sourceforge.net/svnroot/wicket-stuff/trunk/wicket-contrib-tinymce-examples
		</developerConnection>
		<url>
			http://fisheye3.atlassian.com/changelog/wicket-stuff/trunk/wicket-contrib-tinymce-examples
		</url>
	</scm>

	<dependencies>
		<dependency>
			<groupId>org.wicketstuff</groupId>
			<artifactId>wicket-contrib-tinymce</artifactId>
			<version>1.3-SNAPSHOT</version>
		</dependency>

		<!--  JETTY DEPENDENCIES FOR TESTING  -->
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-util</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-management</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<pluginRepositories>
		<pluginRepository>
			<id>mortbay-repo</id>
			<name>mortbay-repo</name>
			<url>http://www.mortbay.org/maven2/release</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<sourceDirectory>src/java</sourceDirectory>
		<testSourceDirectory>src/test</testSourceDirectory>

		<resources>
			<resource>
				<directory>src/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/resources</directory>
				<includes>
					<include>*.properties</include>
				</includes>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<filtering>false</filtering>
				<directory>src/test</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.5</source>
					<target>1.5</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptor>src/assembly/bin.xml</descriptor>
					<finalName>${artifactId}-${version}</finalName>
					<outputDirectory>
						target/distributions
					</outputDirectory>
					<workDirectory>target/assembly/work</workDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<warSourceDirectory>src/webapp</warSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>256m</maxmemory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<templateDirectory>
						file:src/site/template/
					</templateDirectory>
					<template>wicket-site.vm</template>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>surefire-report-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty6-plugin</artifactId>
				<version>6.0.0beta9</version>
				<configuration>
					<webAppSourceDirectory>
						${basedir}/src/webapp
					</webAppSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<configuration>
					<contextPath>/</contextPath>
					<argLine>
						-Xmx=1024m -XX:MaxPermSize=256m
						-XX:+UseConcMarkSweepGC
						-XX:+CMSPermGenSweepingEnabled
						-XX:+CMSClassUnloadingEnabled
					</argLine>
					<connectors>
						<connector
							implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>7089</port>
						</connector>
					</connectors>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<systemProperties>
						<systemProperty>
							<name>org.apache.commons.logging.Log</name>
							<value>
								org.apache.commons.logging.impl.SimpleLog
							</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>
					maven-project-info-reports-plugin
				</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>surefire-report-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<properties>
		<jetty.version>6.1.4</jetty.version>
	</properties>
</project>
